--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     impact: 'Successfully demonstrated a viable approach to small-scale, portable hydro power, showcasing strong skills in both electrical and mechanical design for embedded applications.',
                     tags: ['PCB Design', '3D Design', 'Hardware', 'Power Management'],
                     media: {
-                        images: ['hydro_tubine_1.png','hydro_turbine_2.png','hydro_tubine_3.png','hydro_tubine_4.png','hydro_tubine_5.png','hydro_tubine_6.png','hydro_tubine_7.png'],
+                        images: ['hydro_tubine_1.PNG','hydro_turbine_2.PNG','hydro_tubine_3.png','hydro_tubine_4.PNG','hydro_tubine_5.PNG','hydro_tubine_6.PNG','hydro_tubine_7.PNG'],
                         videos: []
                     }
                 },
@@ -137,7 +137,7 @@
                     impact: 'Created a practical and cost-effective solution for predictive maintenance in industrial settings, significantly reducing potential equipment failures and operational costs.',
                     tags: ['AI', 'C++', 'Python', 'Arduino', 'Real-time'],
                     media: {
-                        images: ['motor_fault_1.png','motor_fault_2.png'],
+                        images: ['motor_fault_1.PNG','motor_fault_2.PNG'],
                         videos: []
                     }
                 },
@@ -343,7 +343,7 @@
                 {
                     name: 'Nodan Gichki',
                     role: 'Embedded Systems Lead', // Updated role
-                    imageSrc: './nodan.png',
+                    imageSrc: './nodan.PNG',
                     fallbackText: 'Nodan',
                     skills: ['Firmware', 'PCB', 'UI/UX', 'C/C++']
                 },
@@ -640,3 +640,4 @@
     </script>
 </body>
 </html>
+
