--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     impact: 'Successfully demonstrated a viable approach to small-scale, portable hydro power, showcasing strong skills in both electrical and mechanical design for embedded applications.',
                     tags: ['PCB Design', '3D Design', 'Hardware', 'Power Management'],
                     media: {
-                        images: ['hydro_tubine_1.PNG','hydro_turbine_2.PNG','hydro_tubine_3.png','hydro_tubine_4.PNG','hydro_tubine_5.PNG','hydro_tubine_6.PNG','hydro_tubine_7.PNG'],
+                        images: ['hydro_tubine_1.PNG','hydro_turbine_2.PNG','hydro_tubine_3.PNG','hydro_tubine_4.PNG','hydro_tubine_5.PNG','hydro_tubine_6.PNG','hydro_tubine_7.PNG'],
                         videos: []
                     }
                 },
@@ -640,4 +640,5 @@
     </script>
 </body>
 </html>
+
 
